--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             height: 500px;
             background-color: antiquewhite;
         }
+        #map div{
+            width: 50px;
+            height: 50px;
+            position: absolute;
+        }
     </style>
 </head>
 <body>
@@ -157,5 +162,15 @@
     <button>fast</button>
     <button>normal</button>
     <button>slow</button>
+    <script>
+        var map = document.getElementById("map")
+        //when refresh the page, generate div as food and snake head
+        function createDiv(color){
+            var div = document.createElement("div")
+            map.appendChild(div)
+            div.style.background = color
+        }
+        createDiv("blue")
+    </script>
 </body>
 </html>
