--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
         }
-        table{
-            position:absolute;
-            left:0;
-            top:0;
+
+        table {
+            position: absolute;
+            left: 0;
+            top: 0;
         }
-        td{
+
+        td {
             width: 48px;
             height: 48px;
         }
-        #map{
+
+        #map {
             width: 500px;
             height: 500px;
             background-color: antiquewhite;
         }
-        #map div{
+
+        #map div {
             width: 50px;
             height: 50px;
             position: absolute;
         }
     </style>
 </head>
+
 <body>
     <!--map dividing line 500*500px 10*10 -->
     <table border="1" cellspacing="0">
@@ -164,12 +170,13 @@
     <button>slow</button>
     <script>
         var map = document.getElementById("map")
+        var bodyNodes = []
         //when refresh the page, generate div as food and snake head
-        function createDiv(color){
+        function createDiv(color) {
             var div = document.createElement("div")
             map.appendChild(div)
-            div.style.left=parseInt(Math.random()*10)*50+"px"
-            div.style.top=parseInt(Math.random()*10)*50+"px"
+            div.style.left = parseInt(Math.random() * 10) * 50 + "px"
+            div.style.top = parseInt(Math.random() * 10) * 50 + "px"
             div.style.background = color
             return div
         }
@@ -179,43 +186,94 @@
         var foodNode = createDiv("red")
         console.log(foodNode)
         console.log(Math.random())
-        function move(){
-            switch(headNode.value){
+        function move() {
+            if (bodyNodes.length > 0) {
+                for (var n = 0; n < bodyNodes.length; n++) {
+                    switch (bodyNodes[n].value) {
+                        case "left":
+                            bodyNodes[n].style.left = parseInt(bodyNodes[n].style.left) - 50 + "px"
+                            break
+                        case "right":
+                            bodyNodes[n].style.left = parseInt(bodyNodes[n].style.left) + 50 + "px"
+                            break
+                        case "up":
+                            bodyNodes[n].style.top = parseInt(bodyNodes[n].style.top) - 50 + "px"
+                            break
+                        case "down":
+                            bodyNodes[n].style.top = parseInt(bodyNodes[n].style.top) + 50 + "px"
+                            break
+                    }
+                }
+            }
+            switch (headNode.value) {
                 case "left":
-                headNode.style.left = parseInt(headNode.style.left)-50+ "px"
-                break
+                    headNode.style.left = parseInt(headNode.style.left) - 50 + "px"
+                    break
                 case "right":
-                headNode.style.left = parseInt(headNode.style.left)+50+ "px"
-                break
+                    headNode.style.left = parseInt(headNode.style.left) + 50 + "px"
+                    break
                 case "up":
-                headNode.style.top = parseInt(headNode.style.top)-50+ "px"
-                break
+                    headNode.style.top = parseInt(headNode.style.top) - 50 + "px"
+                    break
                 case "down":
-                headNode.style.top = parseInt(headNode.style.top)+50+ "px"
-                break
+                    headNode.style.top = parseInt(headNode.style.top) + 50 + "px"
+                    break
             }
-            if(headNode.style.left==foodNode.style.left&&headNode.style.top==foodNode.style.top){
-                 foodNode.style.left=parseInt(Math.random()*10)*50+"px"
-                 foodNode.style.top=parseInt(Math.random()*10)*50+"px"
+
+            if (headNode.style.left == foodNode.style.left && headNode.style.top == foodNode.style.top) {
+                var bodyNode = createDiv("lightblue")
+                var lastNode
+                if (bodyNodes.length > 0) {
+                    lastNode = bodyNodes[bodyNodes.length - 1]
+                }
+                else {
+                    lastNode = headNode
+                }
+                switch (lastNode.value) {
+                    case "left":
+                        bodyNode.style.left = parseInt(lastNode.style.left) + 50 + "px"
+                        bodyNode.style.top = lastNode.style.top
+                        break
+                    case "right":
+                        bodyNode.style.left = parseInt(lastNode.style.left) - 50 + "px"
+                        bodyNode.style.top = lastNode.style.top
+                        break
+                    case "up":
+                        bodyNode.style.top = parseInt(lastNode.style.top) + 50 + "px"
+                        bodyNode.style.left = lastNode.style.left
+                        break
+                    case "down":
+                        bodyNode.style.top = parseInt(lastNode.style.top) - 50 + "px"
+                        bodyNode.style.left = lastNode.style.left
+                        break
+                }
+                bodyNode.value = lastNode.value
+                bodyNodes.push(bodyNode)
+                foodNode.style.left = parseInt(Math.random() * 10) * 50 + "px"
+                foodNode.style.top = parseInt(Math.random() * 10) * 50 + "px"
             }
         }
-        var t = setInterval(move,500)
-        document.onkeydown=function(e){
-            switch(e.keyCode){
+
+
+        var t = setInterval(move, 500)
+        document.onkeydown = function (e) {
+            switch (e.keyCode) {
                 case 37:
-                headNode.value = "left"
-                break
+                    headNode.value = "left"
+                    break
                 case 38:
-                headNode.value = "up"
-                break
+                    headNode.value = "up"
+                    break
                 case 39:
-                headNode.value = "right"
-                break
+                    headNode.value = "right"
+                    break
                 case 40:
-                headNode.value = "down"
-                break
+                    headNode.value = "down"
+                    break
             }
         }
+
     </script>
 </body>
+
 </html>
