--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
                             bodyNodes[n].style.top = parseInt(bodyNodes[n].style.top) + 50 + "px"
                             break
                     }
+                    
                     if (n == 0) {
                         bodyNodes[n].value = headNode.value
                     }
@@ -211,6 +212,7 @@
                     }
                 }
             }
+
             switch (headNode.value) {
                 case "left":
                     headNode.style.left = parseInt(headNode.style.left) - 50 + "px"
@@ -224,6 +226,22 @@
                 case "down":
                     headNode.style.top = parseInt(headNode.style.top) + 50 + "px"
                     break
+            }
+            //hit the wall
+            if(parseInt(headNode.style.left)<0 || parseInt(headNode.style.left)>450 
+            || parseInt(headNode.style.top)<0 || parseInt(headNode.style.top)>450){
+                clearInterval(t)
+                alert("You hit the wall!")
+            }
+            //hit the tail
+            if(bodyNodes.length>0){
+                for(var n=0; n<bodyNodes.length;n++){
+                    if (headNode.style.left==bodyNodes[n].style.left&&
+                    headNode.style.top==bodyNodes[n].style.top) {
+                        alert("You hit your tail!")
+                        clearInterval(t)
+                    }
+                }
             }
 
             if (headNode.style.left == foodNode.style.left && headNode.style.top == foodNode.style.top) {
@@ -261,7 +279,7 @@
         }
 
 
-        var t = setInterval(move, 500)
+        var t = setInterval(move, 300)
         document.onkeydown = function (e) {
             switch (e.keyCode) {
                 case 37:
