--- a/index.html
+++ b/index.html
@@ -137,7 +137,11 @@
     </div>
     <h1>Greedy snake</h1>
     <h2>Press the arrow keys to control the snake</h2>
-    <button>Start</button>
+    <h3>Choose a speed to start!</h3>
+    <input  id="button" type="button" value="Slow" onclick="btnslow();" > 
+    <input  id="button" type="button" value="Normal" onclick="btnnormal();" > 
+    <input  id="button" type="button" value="Fast" onclick="btnfast();" > 
+    <input  id="button" type="button" value="Play again" onclick="refresh();" > 
     <script src="script.js"></script>
 </body>
 
